--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.augurit.kundroid">
+    package="com.haikun.kundroid">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -8,14 +8,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".KundroidApp"
+        android:name="com.haikun.kundroid.KundroidApp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_config"
         android:theme="@style/Theme.Kundroid">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name="com.haikun.kundroid.ui.main.MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
