--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,7 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-kotlinVersion=1.5.21
+kotlinVersion=1.5.31
+
+agpVersion=7.0.2
+agpCoordinates=com.android.tools.build:gradle:7.0.2
